Archive2/ca/e133a799b8aecf/output
main.cpp: In function 'int main()':
main.cpp:41:1: error: expected unqualified-id before '}' token
 }
 ^
